fix: fix #form-row mobile view nested label spacing/margin

--- a/packages/dnb-ui-lib/src/components/form-row/style/_form-row.scss
+++ b/packages/dnb-ui-lib/src/components/form-row/style/_form-row.scss
@@ -131,7 +131,7 @@
       }
       & > .dnb-form-row__content {
         flex-direction: column;
-        .dnb-form-label {
+        & > .dnb-form-label {
           margin-top: 1rem;
         }
       }
